bynkc/tests/fixtures/positive/155_state_sum_machine/src/signal.karn
context signal

type Light = enum { Red, Green }

agent Signal {
  key id: String

  state {
    colour: Light = Red,
  }

  on call peek() -> Effect[Result[(), String]] {
    Ok(())
  }
}
