bynkc/tests/fixtures/negative/71_commit_wrong_state_type/src/demo/agt.karn
context demo.agt

type Id = opaque Int where NonNegative

type Other = {
  m: Int,
}

agent Bad {
  key id: Id

  state {
    n: Int,
  }

  on call set() -> Effect[Int] {
    commit Other { m: 1 }
    Effect.pure(1)
  }
}
